[package]
name = "grit"
version = "0.2.0"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2018"
description = "a git tui in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
chrono="0.4"
crossterm="0.16"
git2="0.12"
lazy_static="1.4"
termimad="0.8"
