[package]
name = "grit"
version = "0.2.0"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2018"
description = "a git tui in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
chrono="0.4"
clap="2"
crossterm="0.17"
fern="0.6"
git2="0.13"
lazy_static="1.4"
log="0.4"
minimad="0.6"
termimad="0.8"
